--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "test": "node node_modules/jasmine/bin/jasmine",
-    "debug": "node --inspect search_test_spec.js"
+    "debug": "node --inspect node_modules/jasmine/bin/jasmine"
   },
   "dependencies": {
     "selenium-webdriver": "latest"
