--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "debug": "node --inspect node_modules/jasmine/bin/jasmine"
   },
   "dependencies": {
+    "jasmine-expect": "^3.8.4",
     "selenium-webdriver": "latest"
   },
   "devDependencies": {
