--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "jasmine-expect": "^3.8.4",
+    "selenium-node-webdriver": "^0.1.2",
     "selenium-webdriver": "latest",
     "webdriverio": "^4.14.0"
   },
