Add data provider for tests

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "scripts": {
     "test": "node node_modules/jasmine/bin/jasmine"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "chromedriver": "^2.43.1",
     "jasmine": "^3.3.0",
+    "jasmine-data-provider": "^2.2.0",
     "selenium-webdriver": "latest"
   }
 }
