--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test",
   "version": "1.0.0",
   "scripts": {
-    "test": "node node_modules/jasmine/bin/jasmine"
+    "test": "node spec/support/jasmine"
   },
   "dependencies": {},
   "devDependencies": {
