--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "dependencies": {},
   "devDependencies": {
     "chromedriver": "^2.43.1",
+    "grunt": "^1.0.3",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-jasmine": "^2.0.2",
+    "gulp": "^4.0.0",
+    "gulp-jasmine": "^4.0.0",
     "jasmine": "^3.3.0",
     "jasmine-data-provider": "^2.2.0",
     "selenium-webdriver": "latest"
