--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "scripts": {
     "test": "node spec/support/jasmine"
   },
-  "dependencies": {},
+  "dependencies": {
+    "browserify": "^16.2.3",
+    "grunt-browserify": "^5.3.0",
+    "grunt-contrib-concat": "^1.0.1"
+  },
   "devDependencies": {
     "chromedriver": "^2.43.1",
     "grunt": "^1.0.3",
     "grunt-cli": "^1.3.2",
-    "grunt-contrib-jasmine": "^2.0.2",
     "gulp": "^4.0.0",
     "gulp-jasmine": "^4.0.0",
     "jasmine": "^3.3.0",
