--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "test": "node spec/support/jasmine"
   },
   "dependencies": {
-    "browserify": "^16.2.3",
-    "grunt-browserify": "^5.3.0",
-    "grunt-contrib-concat": "^1.0.1"
   },
   "devDependencies": {
+    "browserify": "^16.2.3",
+    "grunt-browserify": "^5.3.0",
+    "grunt-contrib-concat": "^1.0.1",
     "chromedriver": "^2.43.1",
     "grunt": "^1.0.3",
     "grunt-cli": "^1.3.2",
