--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "scripts": {
     "test": "node spec/support/jasmine"
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
+    "log4js": "^3.0.6",
     "chromedriver": "^2.43.1",
     "grunt": "^1.0.3",
     "grunt-cli": "^1.3.2",
