--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "scripts": {
     "test": "node spec/support/jasmine"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "log4js": "^3.0.6",
     "chromedriver": "^2.43.1",
     "grunt": "^1.0.3",
     "grunt-cli": "^1.3.2",
@@ -16,6 +14,7 @@
     "gulp-jasmine": "^4.0.0",
     "jasmine": "^3.3.0",
     "jasmine-data-provider": "^2.2.0",
+    "log4js": "^3.0.6",
     "selenium-webdriver": "latest"
   }
 }
