--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test",
   "version": "1.0.0",
   "scripts": {
-    "test": "node spec/support/jasmine"
+    "test": "protractor conf.js"
   },
   "dependencies": {},
   "devDependencies": {
@@ -14,6 +14,7 @@
     "jasmine": "^3.3.0",
     "jasmine-data-provider": "^2.2.0",
     "log4js": "^3.0.6",
+    "protractor": "^5.4.1",
     "selenium-webdriver": "latest"
   }
 }
